# new-escafoldo

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
config/: settings.py  urls.py  views.py
equipamentos/: admin.py  models.py  serializers.py  urls.py  views.py
equipamentos/api/v1/: serializers.py  urls.py  views.py
schemas_docs/: apps.py  urls.py
templates/: index.html
templates/base/: main.html
templates/equipamentos/: equipamento_detail.html  equipamento_detail_by_id.html  equipamento_list.html
visitas/: admin.py  models.py  serializers.py  urls.py  views.py
visitas/api/v1/: serializers.py  views.py
